--- a/src/roblox/.devcontainer/devcontainer.json
+++ b/src/roblox/.devcontainer/devcontainer.json
@@ -34,7 +34,7 @@
 	// },
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "rokit install --force",
+	// "postCreateCommand": "rokit install --no-trust-check",
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
