feat: Initial Subway Surfer Clone implementation
- Implemented core game architecture with modular design
- Added GameManager for central game state management
- Created PlayerController for movement and state handling
- Implemented InputManager with keyboard and touch support
- Added GameConfig for centralized game settings
- Updated project structure for Subway Surfer gameplay
- Added comprehensive README with architecture details
- Configured Rojo project for proper module organization

Core Features:
- 3-lane movement system (left, center, right)
- Jump and slide mechanics
- Game state management (Menu, Playing, Paused, GameOver)
- Score and coin collection system
- Cross-platform input handling
- Event-driven architecture for module communication

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,39 @@
-// More info: https://containers.dev/implementors/json_reference/
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/ryanlua/templates/tree/main/src/roblox
 {
-	"image": "mcr.microsoft.com/devcontainers/javascript-node:1-18-bullseye",
+	"name": "Roblox",
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+		"ghcr.io/ryanlua/features/rojo:0.2.1": {
+			"version": "latest",
+			"toolchainManager": "rokit"
+		}
 	},
+	// Configure tool-specific properties.
 	"customizations": {
+		// Configure properties specific to VS Code.
 		"vscode": {
+			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
-				"mads-hartmann.bash-ide-vscode",
-				"dbaeumer.vscode-eslint"
+				"evaera.vscode-rojo",
+				"kampfkarren.selene-vscode",
+				"johnnymorganz.stylua",
+				"johnnymorganz.luau-lsp"
 			]
 		}
 	},
-	"postCreateCommand": "npm install -g @devcontainers/cli"
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	"forwardPorts": [
+		34872
+	],
+	"portsAttributes": {
+		"34872": {
+			"label": "Rojo"
+		}
+	},
+	// Use 'postCreateCommand' to run commands after the container is created.
+	"postCreateCommand": "rokit install --no-trust-check"
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
